--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ body{
     margin: 0;
     padding: 0;
 }
+
+.principal{
+    background-image: url("img/Background.png");
+}
+
+.container{
+    height: 100vh;
+}
