--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body{
 
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .container__botao{
@@ -31,4 +33,5 @@ body{
     border-radius: 5px;
     padding: 1em;
     color: var(--branco-principal);
+    display: block;
 }
