--- a/style.css
+++ b/style.css
@@ -85,3 +85,16 @@ body{
 .descricao__texto {
     color: var(--cinza-segundario);
 }
+
+.secundario__imagem2{
+    width: 20%;
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
