--- a/style.css
+++ b/style.css
@@ -86,10 +86,6 @@ body{
     color: var(--cinza-segundario);
 }
 
-.secundario__imagem2{
-    width: 20%;
-}
-
 .secundario__botao {
     display: inline-block;
     margin-top: 1em;
@@ -97,4 +93,25 @@ body{
 
 .container__descricao {
     padding: 2em;
+}
+
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
 }
